# brisk-setup-tests

./: README.md  main.cpp
.github/actions/build-brisk/: action.yml
.github/actions/build-ninja/: action.yml
.github/actions/build-vs/: action.yml
.github/actions/build-xcode/: action.yml
.github/actions/install-build-prerequisites/: action.yml
.github/actions/install-prerequisites/: action.yml
.github/workflows/: info.yml  test.yml
example/: CMakeLists.txt
